@@ -1,7 +1,7 @@
 /**
 	\file "Object/inst/general_collection_type_manager.h"
 	Template class for instance_collection's type manager.  
-	$Id: general_collection_type_manager.h,v 1.13.74.1 2009/03/04 23:36:22 fang Exp $
+	$Id: general_collection_type_manager.h,v 1.13.74.2 2009/03/06 02:50:07 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_INST_GENERAL_COLLECTION_TYPE_MANAGER_H__
@@ -94,21 +94,7 @@ public:
 
 	good_bool
 	complete_type_definition_footprint(
-			const count_ptr<const const_param_expr_list>& r) const {
-		if (this->is_relaxed_type() && r) {
-			const instance_collection_parameter_type
-				ct(this->type_parameter, r);
-#if FOOTPRINT_HAS_PARAMS
-			const footprint fake_top(*r);
-#else
-			const footprint fake_top;
-#endif
-			// don't have top-level footprint handy, need it?
-			return ct.unroll_definition_footprint(fake_top);
-		} else {
-			return good_bool(true);
-		}
-	}
+		const count_ptr<const const_param_expr_list>& r) const;
 
 	bool
 	is_complete_type(void) const;
